--- a/JS_2-6/css/style_6.css
+++ b/JS_2-6/css/style_6.css
@@ -1,6 +1,5 @@
 body {
-    font-family: sans-serif;
-    box-sizing: border-box;
+    font-family: 'SF Pro Display', sans-serif;
 }
 
 header {
@@ -20,6 +19,11 @@ button:focus {
     height: 150px;
     display: flex;
     justify-content: center;
+}
+
+.img {
+    max-width: 100%;
+    height: auto
 }
 
 .btn-cart {
@@ -43,8 +47,9 @@ button:focus {
     align-self: center;
 }
 
-.Goods {
+.products {
     display: flex;
+    padding: 40px 80px;
     flex-wrap: wrap;
 }
 
@@ -54,7 +59,6 @@ h3 {
 
 p {
     margin: 0 0 5px 0;
-    color: #fff;
 }
 
 .product-item {
@@ -66,11 +70,6 @@ p {
     border-radius: 10px;
     text-align: center;
     background-color: #f36363;
-}
-
-img {
-    max-width: 100%;
-    height: auto
 }
 
 .desc {
@@ -89,7 +88,8 @@ img {
     right: 0;
     top: 130%;
     position: absolute;
-    background-color: white;
+    background-color: #c5c5c5;
+    ;
     padding: 20px;
     color: black;
     width: 300px;
@@ -115,7 +115,6 @@ img {
 .del-btn {
     margin-top: 5px;
     background-color: #0264b4;
-    ;
     padding: 5px 15px;
     border: 1px solid transparent;
     color: #fafafa;
@@ -151,7 +150,7 @@ img {
 
 .product-single-price {
     color: #474747;
-    font-size: 0.5em;
+    font-size: 0.7em;
 }
 
 .product-price {
@@ -162,9 +161,14 @@ img {
     max-width: 150px;
 }
 
+.product-title {
+    color: #000;
+}
+
 .product-quantity {
     margin-top: 15px;
     font-size: 0.75em;
+    color: #000;
 }
 
 .right-block {
